<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardrone_gazebo</name>
  <version>0.0.0</version>
  <description>The ardrone_gazebo package for ROS 2 Jazzy and Gazebo Sim</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ardrone_autonomy</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>tf2_ros</depend>
  <depend>rtabmap_slam</depend>
  <depend>nav2_bringup</depend>
  <depend>mrtsp_exploration_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
